--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,6 +27,10 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: publish js filename
+        id: publish
+        run: find dist/assests/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+        #regular linux command that finds the javascript file in dist/assests and then execute echo the file name
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -42,6 +48,6 @@ jobs:
         with: 
           name: dist-files
       - name: Output contents
-        run: ls
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
