--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       - name: publish js filename
         id: publish
-        run: find dist/assests/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
         #regular linux command that finds the javascript file in dist/assests and then execute echo the file name
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
